--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,6 +14,8 @@ jobs:
       # Check-out your repository.
       - name: Checkout
         uses: actions/checkout@v2
+        with: node-version: '20'
+        
 
 
 ### ⬇ IMPORTANT PART ⬇ ###
@@ -21,6 +23,7 @@ jobs:
       - name: Build, Push and Release a Docker container to Heroku. # Your custom step name
         uses: gonuit/heroku-docker-deploy@v1.3.3 # GitHub action name (leave it as it is).
         with:
+          node-version: '20'
           # Below you must provide variables for your Heroku app.
 
           # The email address associated with your Heroku account.
