--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,12 +1,12 @@
 # Your workflow name.
-name: Deploy to heroku.
+name: Deploy to Heroku
 
 # Run workflow on every push to main branch.
 on:
   push:
     branches: [main]
 
-# Your workflows jobs.
+# Your workflow's jobs.
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,16 +14,11 @@ jobs:
       # Check-out your repository.
       - name: Checkout
         uses: actions/checkout@v2
-        with: node-version: '20'
-        
 
-
-### ⬇ IMPORTANT PART ⬇ ###
-
-      - name: Build, Push and Release a Docker container to Heroku. # Your custom step name
-        uses: gonuit/heroku-docker-deploy@v1.3.3 # GitHub action name (leave it as it is).
+      ### ⬇ IMPORTANT PART ⬇ ###
+      - name: Build, Push, and Release a Docker container to Heroku
+        uses: gonuit/heroku-docker-deploy@v1.3.3
         with:
-          node-version: '20'
           # Below you must provide variables for your Heroku app.
 
           # The email address associated with your Heroku account.
@@ -31,11 +26,11 @@ jobs:
           # email: my.email@example.com
           email: ${{ secrets.HEROKU_EMAIL }}
           
-          # Heroku API key associated with provided user's email.
+          # Heroku API key associated with the provided user's email.
           # Api Key is available under your Heroku account settings.
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           
-          # Name of the heroku application to which the build is to be sent.
+          # Name of the Heroku application to which the build is to be sent.
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
 
           # (Optional, default: "./")
@@ -54,9 +49,6 @@ jobs:
           # (Optional, default: "web")
           # Select the process type for which you want the docker container to be uploaded.
           # By default, this argument is set to "web".
-          # For more information look at https://devcenter.heroku.com/articles/process-model
+          # For more information, look at https://devcenter.heroku.com/articles/process-model
           process_type: web
-          
-   
-          
-### ⬆ IMPORTANT PART ⬆ ###
+      ### ⬆ IMPORTANT PART ⬆ ###
