--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,54 +1,39 @@
-# Your workflow name.
-name: Deploy to Heroku
 
-# Run workflow on every push to main branch.
+#heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+#email: ${{ secrets.HEROKU_EMAIL }}
+#heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+
+name: CI/CD Pipeline
+
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
-# Your workflow's jobs.
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
-      # Check-out your repository.
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      ### ⬇ IMPORTANT PART ⬇ ###
-      - name: Build, Push, and Release a Docker container to Heroku
-        uses: gonuit/heroku-docker-deploy@v1.3.3
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          # Below you must provide variables for your Heroku app.
+          python-version: 3.8
 
-          # The email address associated with your Heroku account.
-          # If you don't want to use repository secrets (which is recommended) you can do:
-          # email: my.email@example.com
-          email: ${{ secrets.HEROKU_EMAIL }}
-          
-          # Heroku API key associated with the provided user's email.
-          # Api Key is available under your Heroku account settings.
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          
-          # Name of the Heroku application to which the build is to be sent.
-          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
 
-          # (Optional, default: "./")
-          # Dockerfile directory.
-          # For example, if you have a Dockerfile in the root of your project, leave it as follows:
-          dockerfile_directory: ./
+      - name: Deploy to Heroku
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+          HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
+        run: |
+          heroku login --email $HEROKU_EMAIL --password $HEROKU_API_KEY
+          heroku git:remote -a $HEROKU_APP_NAME
+          git push heroku main
 
-          # (Optional, default: "Dockerfile")
-          # Dockerfile name.
-          dockerfile_name: Dockerfile
-
-          # (Optional, default: "")
-          # Additional options of docker build command.
-          docker_options: "--no-cache"
-
-          # (Optional, default: "web")
-          # Select the process type for which you want the docker container to be uploaded.
-          # By default, this argument is set to "web".
-          # For more information, look at https://devcenter.heroku.com/articles/process-model
-          process_type: web
-      ### ⬆ IMPORTANT PART ⬆ ###
